[RF] Fixed footer spacing, removed hover effect from mobile nav links

--- a/public/stylesheets/shared.scss
+++ b/public/stylesheets/shared.scss
@@ -602,10 +602,6 @@ main {
     grid-area: footer;
     text-align: center;
 
-    p, a {
-        margin: 0;
-    }
-
     .main-footer__cta {
         background-color: black;
         color: white;
@@ -658,10 +654,8 @@ main {
     justify-content: space-around;
     -webkit-box-align: center;
             align-items: center;
-    margin-top: 32px;
-    margin-bottom: 0px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: 32px auto 0px auto;
+    width: 200px;
 
     .main-footer__social-media-link {
     
